Don't rely on nifty_layout

--- a/rails_generators/form_builder/templates/views/submissions/show.html.erb
+++ b/rails_generators/form_builder/templates/views/submissions/show.html.erb
@@ -1,4 +1,4 @@
-<% title "Submitted: " + @submission.form.name %>
+<h2>Submitted: <%=h @submission.form.name %></h2>
 
 <p>
   <strong>Submitted:</strong>
